toyswap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toyswap-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - http:
      paths:
      - path: /register
        backend:
          serviceName: toyswap-register
          servicePort: 8080
      - path: /authenticate
        backend:
          serviceName: toyswap-exchange
          servicePort: 8080
      - path: /toys
        backend:
          serviceName: toyswap-exchange
          servicePort: 8080
      - path: /purchasedtoys
        backend:
          serviceName: toyswap-exchange
          servicePort: 8080
      - path: /users/current
        backend:
          serviceName: toyswap-exchange
          servicePort: 8080
